<resources>
    <string name="app_name">CountryTriviaApp</string>
    <string name="login">Login</string>
    <string name="selection">Select a subject</string>
    <string name="login_string">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="AppName">Country Trivia</string>
    <string name="subtitle_login">Login</string>
    <string name="F.M.P">Forgot my password</string>
    <string name="back">Back</string>
    <string name="email">Email</string>
    <string name="registration">Registration</string>
    <string name="not_a_member___signin_string">not a member ? SignIn</string>
    <string name="already_a_member___login_string">already a member ? login</string>
    <string name="login_ek1_string">login</string>
    <string name="signin_string">Sing-in</string>
    <string name="todo">TODO</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome</string>
    <string name="guest">Guest</string>
    <string name="logoff">Logoff</string>
    <string name="score">Score:</string>
    <string name="next_question">Next question</string>
    <string name="flagimage">flag image</string>
    <string name="Remember">Remember me?</string>
    <string name="Forgot_password">Forgot Password</string>
    <string name="facebook">Connect with Facebook</string>
    <string name="Google">Connect with Google</string>
    <string name="registerBtn"><![CDATA[<  Register]]></string>
    <string name="cancel">cancel</string>
    <string name="ready">I am ready!</string>
</resources>