<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:isScrollContainer="false"
    android:overScrollMode="never"
    android:persistentDrawingCache="none"
    android:scrollbarAlwaysDrawHorizontalTrack="false"
    android:scrollbarAlwaysDrawVerticalTrack="false"
    android:scrollbars="none"
    app:layout_scrollFlags="noScroll">
    <!--
    /*
     *	This content is generated from the API File Info.
     *	(Alt+Shift+Ctrl+I).
     *
     *	@desc
     *	@file 		google_pixel_3xl___1
     *	@date 		0
     *	@title 		Google Pixel 3XL  1
     *	@author
     *	@keywords
     *	@generator 	Export Kit v1.3.xd
     *
     */
    -->
    <ScrollView
        android:id="@+id/google_pixel_3xl___2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:isScrollContainer="false"
        android:overScrollMode="never"
        android:persistentDrawingCache="none"
        android:scrollbars="none">

        <RelativeLayout
            android:id="@+id/content_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isScrollContainer="false"
            android:overScrollMode="never"
            android:persistentDrawingCache="none"
            android:scrollbars="none">

            <View
                android:id="@+id/ellipse_3"
                android:layout_width="770dp"
                android:layout_height="1004dp"
                android:layout_marginStart="-40dp"
                android:layout_marginTop="-350dp"
                android:background="@drawable/ellipse_3_shape" />

            <Button
                android:id="@+id/registrationFragment_register_button"
                android:layout_width="175dp"
                android:layout_height="37dp"
                android:layout_marginStart="119dp"
                android:layout_marginTop="513dp"
                android:background="@drawable/rectangle_2_shape"
                android:text="@string/register" />

            <ImageButton
                android:id="@+id/registrationFragment_back_button"
                android:layout_width="63dp"
                android:layout_height="57dp"
                android:layout_alignEnd="@+id/registrationFragment_register_button"
                android:layout_alignBottom="@+id/ellipse_4"
                android:layout_marginEnd="219dp"
                android:layout_marginBottom="39dp"
                android:background="@drawable/ellipse_3_shape"
                android:src="@drawable/abc_vector_test"
                tools:ignore="PrivateResource" />

            <TextView
                android:id="@+id/signin"
                android:layout_width="104dp"
                android:layout_height="55dp"
                android:layout_marginStart="163dp"
                android:layout_marginTop="61dp"
                android:text="@string/signin_string"
                android:textColor="@color/login_color"
                android:textSize="36sp" />

            <View
                android:id="@+id/ellipse_4"
                android:layout_width="926dp"
                android:layout_height="1105dp"
                android:layout_marginStart="-64dp"
                android:layout_marginTop="-375dp"
                android:alpha="0.54117647058824"
                android:background="@drawable/ellipse_4_shape" />

            <EditText
                android:id="@+id/registrationFragment_email_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signin"
                android:layout_alignStart="@+id/signin"
                android:layout_alignEnd="@+id/signin"
                android:layout_marginStart="-51dp"
                android:layout_marginTop="76dp"
                android:layout_marginEnd="-55dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:autofillHints="" />

            <EditText
                android:id="@+id/registrationFragment_passwordOne_passwordTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/registrationFragment_email_textView"
                android:layout_alignStart="@+id/signin"
                android:layout_alignEnd="@+id/signin"
                android:layout_marginStart="-51dp"
                android:layout_marginTop="39dp"
                android:layout_marginEnd="-54dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/registrationFragment_passwordTwo_passwordTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/registrationFragment_email_textView"
                android:layout_alignStart="@+id/signin"
                android:layout_alignEnd="@+id/signin"
                android:layout_marginStart="-51dp"
                android:layout_marginTop="118dp"
                android:layout_marginEnd="-52dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </RelativeLayout>

    </ScrollView>
</HorizontalScrollView>